# cookiecutter-python-cpp

./: README.rst  cookiecutter.json
hooks/: post_gen_project.py
tests/test-import-single-module/: CMakeLists.txt  test.cpp
{{cookiecutter.project_slug}}/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.rst  azure-pipelines-cpp-dev.yml  azure-pipelines-python-dev.yml  cookiecutter_replay.sh  format_example.cpp  pre-commit  setup.py
{{cookiecutter.project_slug}}/.azure-pipelines-dev/: linux-cpp.yml  linux-python.yml  win-cpp.yml  win-python.yml
{{cookiecutter.project_slug}}/.azure-pipelines-release/: linux-python.yml  win-python.yml
{{cookiecutter.project_slug}}/.ci_scripts/: run_docker_build_dev_cpp.sh  run_docker_build_dev_python.sh  run_docker_build_release_python_pip.sh
{{cookiecutter.project_slug}}/.cookiecutter_replay/: cookiecutter-cpp.json
{{cookiecutter.project_slug}}/cmake/: PracticalCIProject.cmake  clang-tidy.cmake  iwyu.cmake  static-checks-format-check-all.sh  static-checks-format-check-uncommitted.sh  static-checks-format-fix-all.sh  static-checks-format-fix-uncommitted.sh  static-checks-run-clang-tidy.sh  static-checks.cmake
{{cookiecutter.project_slug}}/cmake-package/: {{cookiecutter.project_slug}}Config.cmake.in
{{cookiecutter.project_slug}}/conda/: condaenv_dev.yaml  requirements_dev.txt
{{cookiecutter.project_slug}}/doc/: CMakeLists.txt
{{cookiecutter.project_slug}}/include/private/: README.rst
{{cookiecutter.project_slug}}/include/public/: README.rst
{{cookiecutter.project_slug}}/include/public/{{cookiecutter.project_namespace}}/{{cookiecutter.project_slug}}/: Version.h.in
{{cookiecutter.project_slug}}/include/public/{{cookiecutter.project_namespace}}/{{cookiecutter.project_slug}}/core/: A.h  B.h  C.h  D.h
{{cookiecutter.project_slug}}/provision/linux/: distro.sh  provision.sh
{{cookiecutter.project_slug}}/provision/linux/docker/: build_docker.sh  install_base_dockcross.sh  install_local_dockcross.sh
{{cookiecutter.project_slug}}/src/cpp/: null.cpp
{{cookiecutter.project_slug}}/src/cpp/{{cookiecutter.project_slug}}/: CMakeLists.txt  Version.cpp.in
{{cookiecutter.project_slug}}/src/cpp/{{cookiecutter.project_slug}}/core/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  E.h  core_python_bindings.cpp
{{cookiecutter.project_slug}}/tests/cpp/: test_main.cpp
{{cookiecutter.project_slug}}/tests/cpp/{{cookiecutter.project_slug}}/: test_{{cookiecutter.project_slug}}.cpp
{{cookiecutter.project_slug}}/tests/cpp/{{cookiecutter.project_slug}}/core/: test_core.cpp
{{cookiecutter.project_slug}}/tests/python/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/tests/python/core/: test_core.py
